# ros-repo-5

./: .gitignore  README.md
AI/: README.md  car_plate_publisher.py  car_plate_subscriber.py  detected_license_plates.csv  update_car_plate_db.py
AI/car_plate_detection/ComputerVision/: camera_OCR_test.py  upgrade_camera_OCR.py
AI/car_plate_detection/data/: detected_license_plates.csv
GUI/Admin/: DB_set.py  manager_gui.py  manager_gui.ui  map_info.ui  park_geo.py  total_graph.ui
GUI/User/: user_gui.py  user_gui.ui
Main_server/: car_plate_subscriber_updateDB.py  domain.yaml  forward_node.py
Main_server/aruco_marker_detector/: package.xml  setup.cfg  setup.py
Main_server/aruco_marker_detector/aruco_marker_detector/: aruco_marker_detector_node.py  calibration_matrix.npy  distortion_coefficients.npy
Main_server/final_project_gui_package/: package.xml  setup.cfg  setup.py
Main_server/forward_command/: package.xml  setup.cfg  setup.py
Main_server/main_service/: package.xml  setup.cfg  setup.py
Main_server/server_and_gui_package/: package.xml  setup.cfg  setup.py
RH_lot/: README.md  check_park_publisher.py  check_park_subscriber.py  server_receive.py
RH_lot/ESP32_RFIDs_Wifi/: ESP32_RFIDs_Wifi.ino
RH_lot/ESP32_RFIDs_check/: ESP32_RFIDs_check.ino  config.h
RH_lot/Lot_check/: Lot_check.ino
RH_lot/RFID_ckeck/: RFID_ckeck.ino
RH_robot/: ROS_commuicate.py  Readme.md  waypoint.py
RH_robot/Cooperation/: Readme.md  received_video_and_push_rotaion.py  waypoint.py
RH_robot/RH_control/: RH_control.ino
RH_robot/path_planning/: package.xml  setup.py
(+31 files in other folders)
