<?xml version="1.0"?>
<package format="3">
  <name>aruco_marker_detector</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for detecting ArUco markers</description>

  <maintainer email="yohangim119@gmail.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
